--- a/beginners/First.html
+++ b/beginners/First.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>【初學量子1】量子有這麽難?7個方法告訴你如何入門量子科技 | 詼諧_GreyShoes Q</title>
+		<title>【初學量子1】量子有這麽難?7個方法告訴你如何入門量子科技-詼諧_GreyShoes Q</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="discription" content="">
