--- a/beginners/First.html
+++ b/beginners/First.html
@@ -55,7 +55,7 @@
 										<h1>7個方法告訴你如何入門量子科技</h1>
 									</header>
 
-									<span class="image main"><img src="../blog/第1篇/picture/title.png" alt="初學者入門量子科技教學" /></span>
+									<span class="image main"><img src="../blog/第1篇/picture/title.png" alt="初學者入門量子科技教學-初學量子-詼諧_GreyShoes Q量子學習網站" /></span>
 									
 									<h2>爲什麽要學量子科技(Quantum Technology)</h2>
 									<br/>
