--- a/activity.html
+++ b/activity.html
@@ -73,16 +73,19 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="#" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="activity/picture/QHack.png" alt="" data-position="center center" />
 									</a>
 									<div class="content" style="background-color: #87c5a4de;">
 										<div class="inner">
 											<header class="major">
-												<h3>Orci maecenas</h3>
+												<h2>QHack2022黑客馬拉松</h2>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<!-- <p>截止報名：</p> -->
+											<p><strong>活動日期：2/14（一）~2/25（五）</strong><br/>
+											QHack獨一無二的量子計算慶祝活動，將於2022年2月14日至25日再次回歸！
+											QHack 2022是一個免費的線上黑客松活動，適合所有經驗水平的參與者，内容包括媒體會議、公開駭客馬拉松和編碼挑戰。</p>
 											<ul class="actions">
-												<li><a href="#" class="button">閲讀更多</a></li>
+												<li><a href="https://mailchi.mp/qhack/signups-2022" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
