--- a/activity.html
+++ b/activity.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/badge.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -80,8 +81,7 @@
 											<header class="major">
 												<h2>QHack2022黑客馬拉松</h2>
 											</header>
-											<!-- <p>截止報名：</p> -->
-											<p><strong>活動日期：2/14（一）~2/25（五）</strong><br/>
+											<p><strong>活動日期：2/14（一）~2/25（五）</strong><span class="badge badge-primary">報名開放中</span><br/>
 											QHack獨一無二的量子計算慶祝活動，將於2022年2月14日至25日再次回歸！
 											QHack 2022是一個免費的線上黑客松活動，適合所有經驗水平的參與者，内容包括媒體會議、公開駭客馬拉松和編碼挑戰。</p>
 											<ul class="actions">
