--- a/activity.html
+++ b/activity.html
@@ -81,7 +81,8 @@
 											<header class="major">
 												<h2>QHack2022黑客馬拉松</h2>
 											</header>
-											<p><strong>活動日期：2/14（一）~2/25（五）</strong><span class="badge badge-primary">報名開放中</span><br/>
+											<p><strong>活動日期：2/14（一）~2/25（五）</strong>
+											<span class="badge open">報名開放中</span> <span class="badge place">線上</span><br/>
 											QHack獨一無二的量子計算慶祝活動，將於2022年2月14日至25日再次回歸！
 											QHack 2022是一個免費的線上黑客松活動，適合所有經驗水平的參與者，内容包括媒體會議、公開駭客馬拉松和編碼挑戰。</p>
 											<ul class="actions">
@@ -92,16 +93,20 @@
 								</section>
 								<section>
 									<a href="#" class="image">
-										<img src="images/pic09.jpg" alt="" data-position="top center" />
+										<img src="activity/picture/ibmLOGO.jpg" alt="" data-position="top center" />
 									</a>
 									<div class="content" style="background-color: #87c5a4;">
 										<div class="inner">
 											<header class="major">
-												<h3>Rhoncus magna</h3>
+												<h2>IBM 量子糾錯暑期學校2022</h2>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p><strong>截至日期：3/3（四）</strong>
+												<span class="badge open">報名開放中</span> <span class="badge place">美國紐約</span> <span class="badge age">18+</span><br/>
+												<strong>活動日期：7/5（二）~7/30（六）</strong><br/>
+												</p>
+												
 											<ul class="actions">
-												<li><a href="#" class="button">閲讀更多</a></li>
+												<li><a href="#" class="button">閲讀更多</a></li><li><a href="#" class="button">點我報名</a></li>
 											</ul>
 										</div>
 									</div>
