--- a/activity.html
+++ b/activity.html
@@ -101,12 +101,12 @@
 												<h2>IBM 量子糾錯暑期學校2022</h2>
 											</header>
 											<p><strong>截至日期：3/3（四）</strong>
-												<span class="badge open">報名開放中</span> <span class="badge place">美國紐約</span> <span class="badge age">18+</span><br/>
+												<span class="badge open">報名開放中</span> <span class="badge place">美國紐約</span> <span class="badge age">18+</span> <span class="badge difficulty">困難</span><br/>
 												<strong>活動日期：7/5（二）~7/30（六）</strong><br/>
-												</p>
+												錯誤是最嚴重妨礙量子計算機發揮潛力的障礙之一，因此發現並糾正錯誤（QEC）成爲了各國研究人員正在努力克服的課題。歡迎鼓勵對QEC實驗和理論方面感興趣的個人參與並為解決這一重大挑戰做出貢獻！</p>
 												
 											<ul class="actions">
-												<li><a href="#" class="button">閲讀更多</a></li><li><a href="#" class="button">點我報名</a></li>
+												<li><a href="https://research.ibm.com/blog/2022-quantum-summer-school" class="button">閲讀更多</a></li><li><a href="https://www.ibm.com/quantum-computing/summer-school/" class="button">點我報名</a></li>
 											</ul>
 										</div>
 									</div>
