--- a/activity.html
+++ b/activity.html
@@ -113,16 +113,18 @@
 								</section>
 								<section>
 									<a href="#" class="image">
-										<img src="images/pic10.jpg" alt="" data-position="25% 25%" />
+										<img src="activity/picture/IBM-Quantum-Awards-Open-Science-Prize.png" alt="" data-position="25% 25%" />
 									</a>
 									<div class="content" style="background-color: #87c5a4de;">
 										<div class="inner">
 											<header class="major">
-												<h3>Sed nunc ligula</h3>
+												<h3>IBM量子獎：開放科學獎</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p><strong>活動日期：2021/11/29（一）~2022/4/16（六）</strong>
+												<span class="badge run">進行中</span> <span class="badge open">報名開放中</span> <span class="badge place">線上</span> <span class="badge difficulty">困難</span><br/>
+												錯誤是最嚴重妨礙量子計算機發揮潛力的障礙之一，因此發現並糾正錯誤（QEC）成爲了各國研究人員正在努力克服的課題。歡迎鼓勵對QEC實驗和理論方面感興趣的個人參與並為解決這一重大挑戰做出貢獻！</p>
 											<ul class="actions">
-												<li><a href="#" class="button">閲讀更多</a></li>
+												<li><a href="https://ibmquantumawards.bemyapp.com/#/event" class="button">閲讀更多</a></li>
 											</ul>
 										</div>
 									</div>
