--- a/activity.html
+++ b/activity.html
@@ -122,7 +122,7 @@
 											</header>
 											<p><strong>活動日期：2021/11/29（一）~2022/4/16（六）</strong>
 												<span class="badge run">進行中</span> <span class="badge open">報名開放中</span> <span class="badge place">線上</span><br/>
-												</p>
+												今年，挑戰賽將介紹量子類比領域的一個問題，可以通過兩種方法之一解決（有無脈衝）。每種方法的最佳開源解決方案將獲得40，000美元的獎金，而其中一個獲勝者將獲得另外20，000美元的獎金。</p>
 											<ul class="actions">
 												<li><a href="https://ibmquantumawards.bemyapp.com/#/event" class="button">閲讀更多</a></li>
 											</ul>
