--- a/activity.html
+++ b/activity.html
@@ -120,7 +120,7 @@
 											<header class="major">
 												<h3>IBM量子獎：開放科學獎</h3>
 											</header>
-											<p><strong>活動日期：2021/11/29（一）~2022/4/16（六）</strong>
+											<p><strong>活動日期：2021/11/29~2022/4/16</strong>
 												<span class="badge run">進行中</span> <span class="badge open">報名開放中</span> <span class="badge place">線上</span><br/>
 												今年，挑戰賽將介紹量子類比領域的一個問題，可以通過兩種方法之一解決（有無脈衝）。每種方法的最佳開源解決方案將獲得40，000美元的獎金，而其中一個獲勝者將獲得另外20，000美元的獎金。</p>
 											<ul class="actions">
@@ -157,7 +157,6 @@
 							<ul class="copyright">
 								<li>&copy; 詼諧_GreyShoes Q</li><li>URL: <a href="https://greyshoesq.com"> https://greyshoesq.com</a></li>
 							</ul>
-							<img style="max-width: 500px; position: relative; left: 600px; bottom: 100px;" src="blog/picture/myicon_ name.png" alt="詼諧_GreyShoes Q-量子學習網站-灰鞋">
 						</div>
 					</footer>
 
