--- a/beginners/First.html
+++ b/beginners/First.html
@@ -422,7 +422,7 @@
 			<script src="../assets/js/breakpoints.min.js"></script>
 			<script src="../assets/js/util.js"></script>
 			<script src="../assets/js/main.js"></script>
-			<script src="../blog/第1篇/picture/bookpicture.js"></script>
+			<script src="../assets/js/bookpicture.js"></script>
 			<script src="../assets/js/message.js"></script>
 
 	</div>
