--- a/activity.html
+++ b/activity.html
@@ -51,7 +51,7 @@
 								<h1>活動</h1>
 							</header>
 							<div class="content">
-								<p>講座、黑客松、量子挑戰賽等最新活動内容<br/>
+								<p>講座、黑客松、量子挑戰賽等最新資訊<br/>
 								發揮創意挑戰自己</p>
 							</div>
 						</div>
