--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>詼諧_GreyShoes Q 量子學習網站</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/main.css"/>
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -29,12 +29,12 @@
 					<nav id="menu">
 						<ul class="links">
 							<!-- <li><a href="index.html">首頁</a></li> -->
-							<li><a href="landing.html">推薦書籍/文章</a></li>
+							<li><a href="paper.html">推薦書籍/文章</a></li>
 							<li><a href="beginners.html">初學量子</a></li>
-							<li><a href="landing.html">專題研究&名詞介紹</a></li>
-							<li><a href="landing.html">程式實作</a></li>
-							<li><a href="landing.html">產業新知</a></li>
-							<li><a href="landing.html">活動</a></li>
+							<li><a href="advance.html">專題研究&名詞介紹</a></li>
+							<li><a href="code.html">程式實作</a></li>
+							<li><a href="news.html">產業新知</a></li>
+							<li><a href="activity.html">活動</a></li>
 							<!-- <li><a href="generic.html">Generic</a></li> -->
 							<!-- <li><a href="elements.html">Elements</a></li> -->
 						</ul>
@@ -59,10 +59,12 @@
 							</div>
 						</div>
 					
-
-					<video autoplay loop muted style="position: absolute; top: -30px; left: 0; border: 0px; max-width: 100%;">
+						<video autoplay loop muted style="position: absolute; top: -30px; left: 0; border: 0px; width: 100%;">
+							<source src="blog/picture/homewrapper.mp4">
+						</video>
+					<!-- <video autoplay loop muted style="position: absolute; top: -30px; left: 0; border: 0px; max-width: 100%;">
 						<source src="blog/picture/homewrapper.mp4">
-					</video>
+					</video> -->
 
 				</section>
 
