--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					</nav>
 
 				<!-- Banner -->
-					<section id="banner" class="major">
+					<section id="banner" class="major" style="position: relative;">
 						<div class="inner">
 							<header class="major">
 								<h1>詼諧_GreyShoes Q 量子學習網站</h1>
@@ -58,13 +58,9 @@
 								</ul>
 							</div>
 						</div>
-					
-						<video autoplay loop muted style="position: absolute; top: -30px; left: 0; border: 0px; width: 100%;">
-							<source src="blog/picture/homewrapper.mp4">
-						</video>
-					<!-- <video autoplay loop muted style="position: absolute; top: -30px; left: 0; border: 0px; max-width: 100%;">
+					<video autoplay loop muted style="position: absolute; top: 5%; border: 0px; max-width: 100%; ">
 						<source src="blog/picture/homewrapper.mp4">
-					</video> -->
+					</video>
 
 				</section>
 
