--- a/beginners/First.html
+++ b/beginners/First.html
@@ -178,7 +178,7 @@
 									<br/>
 									<a href="https://www.youtube.com/c/qiskit">Qiskit Youtube 頻道</a>
 									<br/>
-									<iframe width="450" height="280" src="https://www.youtube.com/embed/elL-3_Idu-o?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<iframe width="100%" src="https://www.youtube.com/embed/elL-3_Idu-o?" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 									<br/>
 									<br/>
 									<br/>
