--- a/beginners.html
+++ b/beginners.html
@@ -9,6 +9,7 @@
 		<title>初學量子 | 詼諧_GreyShoes Q</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="discription" content="從量子電腦最早被提出，至今已超過50年，而能使用的量子位元僅有不到100個... 量子不是一個騙局,也不是一種噱頭,更不只是一股潮流;量子是未來科技結構中不可或缺的一塊基石。 以下介紹的7種極具實質效益的方法,即使沒有技術背景也能夠簡單入手...">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
@@ -73,7 +74,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a href="beginners/First.html" class="image">
-										<img src="images/pic08.jpg" alt="" data-position="center center" />
+										<img src="beginners/picture/sevenway.png" alt="" data-position="center center" />
 									</a>
 									<div class="content" style="background-color: #8d82c4ef;">
 										<div class="inner">
@@ -81,7 +82,9 @@
 												<h4 style="font-size: 0.9em;">【初學量子1】量子有這麽難?</h4>
 												<h3>7個方法告訴你如何入門量子科技</h3>
 											</header>
-											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
+											<p>從量子電腦最早被提出，至今已超過50年，而能使用的量子位元僅有不到100個... 
+												量子不是一個騙局,也不是一種噱頭,更不只是一股潮流;量子是未來科技結構中不可或缺的一塊基石。
+												以下介紹的7種極具實質效益的方法,即使沒有技術背景也能夠簡單入手...</p>
 											<ul class="actions">
 												<li><a href="beginners/First.html" class="button">閲讀更多</a></li>
 											</ul>
