--- a/beginners.html
+++ b/beginners.html
@@ -79,7 +79,7 @@
 									<div class="content" style="background-color: #8d82c4ef;">
 										<div class="inner">
 											<header class="major">
-												<h4 style="font-size: 0.9em;">【初學量子1】量子有這麽難?</h4>
+												<h4 style="font-size: 0.9em;">【初學量子】量子有這麽難?</h4>
 												<h3>7個方法告訴你如何入門量子科技</h3>
 											</header>
 											<p>從量子電腦最早被提出，至今已超過50年，而能使用的量子位元僅有不到100個... 
@@ -134,6 +134,7 @@
 									<p>待辦事項</p>
 									<ul class="actions">
 										<li><a href="#" class="button next">了解更多</a></li>
+										<li><span><form action="https://forms.office.com/r/y3gdAjX7Rw"><button id="btn" class="baoming">加入我們</button></span></form></li>
 									</ul>
 								</div>
 							</section>
