--- a/activity.html
+++ b/activity.html
@@ -106,7 +106,8 @@
 												錯誤是最嚴重妨礙量子計算機發揮潛力的障礙之一，因此發現並糾正錯誤（QEC）成爲了各國研究人員正在努力克服的課題。歡迎鼓勵對QEC實驗和理論方面感興趣的個人參與並為解決這一重大挑戰做出貢獻！</p>
 
 											<ul class="actions">
-												<li><a href="https://research.ibm.com/blog/2022-quantum-summer-school" class="button">閲讀更多</a></li><li><span><form action="https://www.ibm.com/quantum-computing/summer-school/"><button id="btn" class="baoming">點我報名</button></span></form></li>
+												<li><a href="https://research.ibm.com/blog/2022-quantum-summer-school" class="button">閲讀更多</a></li>
+												<li><span><form action="https://www.ibm.com/quantum-computing/summer-school/"><button id="btn" class="baoming">點我報名</button></span></form></li>
 											</ul>
 										</div>
 									</div>
