--- a/activity.html
+++ b/activity.html
@@ -140,6 +140,7 @@
 									</header>
 									<p>待辦事項</p>
 									<ul class="actions">
+										<li><span><form action="https://forms.office.com/r/y3gdAjX7Rw"><button id="btn" class="jiaru">加入我們</button></span></form></li>
 										<li><a href="#" class="button next">了解更多</a></li>
 									</ul>
 								</div>
