--- a/beginners.html
+++ b/beginners.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<meta name="discription" content="從量子電腦最早被提出，至今已超過50年，而能使用的量子位元僅有不到100個... 量子不是一個騙局,也不是一種噱頭,更不只是一股潮流;量子是未來科技結構中不可或缺的一塊基石。 以下介紹的7種極具實質效益的方法,即使沒有技術背景也能夠簡單入手...">
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/badge.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -133,8 +134,8 @@
 									</header>
 									<p>待辦事項</p>
 									<ul class="actions">
+										<li><span><form action="https://forms.office.com/r/y3gdAjX7Rw"><button id="btn" class="jiaru">加入我們</button></span></form></li>
 										<li><a href="#" class="button next">了解更多</a></li>
-										<li><span><form action="https://forms.office.com/r/y3gdAjX7Rw"><button id="btn" class="baoming">加入我們</button></span></form></li>
 									</ul>
 								</div>
 							</section>
