--- a/code.html
+++ b/code.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/badge.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -129,6 +130,7 @@
 									</header>
 									<p>待辦事項</p>
 									<ul class="actions">
+										<li><span><form action="https://forms.office.com/r/y3gdAjX7Rw"><button id="btn" class="jiaru">加入我們</button></span></form></li>
 										<li><a href="#" class="button next">了解更多</a></li>
 									</ul>
 								</div>
