--- a/QuantumGateGame.html
+++ b/QuantumGateGame.html
@@ -17,7 +17,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>QHACK</strong> <span>Quantum gate game</span></a>
+						<a href="index.html" class="logo"><strong>Q-HACK</strong> <span>Quantum gate game</span></a>
 						<nav>
 							<a href="#menu">HOW TO PLAY</a>
 						</nav>
@@ -58,15 +58,15 @@
 
 			<table style="width: 420px"> 
 				<tr>
-					<td style="background-color: #0E0B16;"><img id="Img1" src="hackathonGame/picture/control.png" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img2" src="hackathonGame/picture/Hadamard.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img3" src="hackathonGame/picture/Identity.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td class="control" style="background-color: #0E0B16;"><img id="Img1" src="hackathonGame/picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td class="Hadamard" style="background-color: #0E0B16;"><img id="Img2" src="hackathonGame/picture/Hadamard.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td class="Identity" style="background-color: #0E0B16;"><img id="Img3" src="hackathonGame/picture/Identity.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
 				</tr>
 				
 				<tr>
-					<td style="background-color: #0E0B16;"><img id="Img4" src="hackathonGame/picture/PauliX.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img5" src="hackathonGame/picture/PauliY.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img6" src="hackathonGame/picture/PauliZ.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td class="PauliX" style="background-color: #0E0B16;"><img id="Img4" src="hackathonGame/picture/PauliX.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td class="PauliY" style="background-color: #0E0B16;"><img id="Img5" src="hackathonGame/picture/PauliY.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td class="PauliZ" style="background-color: #0E0B16;"><img id="Img6" src="hackathonGame/picture/PauliZ.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
 				</tr>
 			</table>
 
