--- a/QuantumGateGame.html
+++ b/QuantumGateGame.html
@@ -17,7 +17,7 @@
 				<!-- Header -->
 				<!-- Note: The "styleN" class below should match that of the banner element. -->
 					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Q-HACK</strong> <span>Quantum gate game</span></a>
+						<a href="#" class="logo"><strong>Q-HACK</strong> <span>Quantum gate game</span></a>
 						<nav>
 							<a href="#menu">HOW TO PLAY</a>
 						</nav>
