--- a/QuantumGateGame.html
+++ b/QuantumGateGame.html
@@ -58,20 +58,23 @@
 
 			<table style="width: 420px"> 
 				<tr>
-					<td class="control" style="background-color: #0E0B16;"><img id="Img1" src="hackathonGame/picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td class="Hadamard" style="background-color: #0E0B16;"><img id="Img2" src="hackathonGame/picture/Hadamard.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td class="Identity" style="background-color: #0E0B16;"><img id="Img3" src="hackathonGame/picture/Identity.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td style="background-color: #0E0B16;"><img id="Img1" src="hackathonGame/picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td style="background-color: #0E0B16;"><img id="Img2" src="hackathonGame/picture/Hadamard0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td style="background-color: #0E0B16;"><img id="Img3" src="hackathonGame/picture/Hadamard1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
 				</tr>
 				
 				<tr>
-					<td class="PauliX" style="background-color: #0E0B16;"><img id="Img4" src="hackathonGame/picture/PauliX.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td class="PauliY" style="background-color: #0E0B16;"><img id="Img5" src="hackathonGame/picture/PauliY.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td class="PauliZ" style="background-color: #0E0B16;"><img id="Img6" src="hackathonGame/picture/PauliZ.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td style="background-color: #0E0B16;"><img id="Img4" src="hackathonGame/picture/PauliX0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td style="background-color: #0E0B16;"><img id="Img5" src="hackathonGame/picture/PauliX1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td style="background-color: #0E0B16;"><img id="Img6" src="hackathonGame/picture/PauliZ0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+				</tr>
+
+				<tr>
+					<td style="background-color: #0E0B16;"><img id="Img7" src="hackathonGame/picture/PauliZ1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td style="background-color: #0E0B16;"><img id="Img8" src="hackathonGame/picture/Identity0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
+					<td style="background-color: #0E0B16;"><img id="Img9" src="hackathonGame/picture/Identity1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
 				</tr>
 			</table>
-
-			<br/>
-			<br/>
 
 			<div>
 				<span><button id="btn"  class="primary large" style="margin: 15px;">Measure</button></span>
