--- a/hackathonGame/main.html
+++ b/hackathonGame/main.html
@@ -81,7 +81,7 @@
 			<div>
 				<span><button id="btn"  class="primary large" style="margin: 15px;">Measure</button></span>
 				<span><input type="reset" value="Clear" class="large" style="margin-left: 5px;"/></span>
-				<button onclick="ran()">aaa</button>
+				<!-- <button onclick="ran()">aaa</button> -->
 	
 			</div>
 																
