--- a/hackathonGame/main.html
+++ b/hackathonGame/main.html
@@ -29,58 +29,85 @@
 					<nav id="menu">
 
 					</nav>
-				
+			</div>
 
+			<!-- 4x4棋盤 -->
+			<div class="container44" style="float: left;">
+				<div id="Box2" ondrop="Drop(event)" ondragover="AllowDrop(event)" on></div>
+				<div id="Box3" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box4" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box5" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box6" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box7" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box8" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box9" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box0" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box11" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box12" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box13" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box14" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box15" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box16" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div id="Box17" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
+				<div style="clear:both;"></div>
+			</div>
 
-				<div class="container" style="float: left;">
-					<div id="Box2" ondrop="Drop(event)" ondragover="AllowDrop(event)" on></div>
-					<div id="Box3" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box4" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box5" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box6" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box7" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box8" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box9" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box0" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box11" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box12" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box13" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box14" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box15" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box16" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div id="Box17" ondrop="Drop(event)" ondragover="AllowDrop(event)"></div>
-					<div style="clear:both;"></div>
+			<!-- 分數格 -->
+			<div>
+				<!-- 圓形 -->
+				<div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 140px; left: 120px;"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 140px; left: 380px;"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 400px; left: 120px;"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 400px; left: 380px;"></div>
+				</div>
+				<!-- 方形底下&側邊 -->
+				<div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 60px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 190px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 320px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 580px; left: 450px; border: 1px #ccc dashed"></div>
+				</div>
+				<div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 80px; left: 560px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 210px; left: 560px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 340px; left: 560px; border: 1px #ccc dashed"></div>
+					<div style="background-color: #0E0B16; width: 80px; height: 80px; position: absolute; top: 470px; left: 560px; border: 1px #ccc dashed"></div>
 				</div>
 			</div>
 
-			<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 140px; left: 110px;"></div>
-			<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 140px; left: 370px;"></div>
-			<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 400px; left: 110px;"></div>
-			<div style="background-color: #0E0B16; width: 80px; height: 80px; border: 1px #ccc dashed; border-radius: 40px; position: absolute; top: 400px; left: 370px;"></div>
 
-			<table style="width: 420px"> 
-				<tr>
-					<td style="background-color: #0E0B16;"><img id="Img1" src="picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img2" src="picture/Hadamard0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img3" src="picture/Hadamard1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-				</tr>
-				
-				<tr>
-					<td style="background-color: #0E0B16;"><img id="Img4" src="picture/PauliX0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img5" src="picture/PauliX1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img6" src="picture/PauliZ0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-				</tr>
+			<br/>
+			<br/>
+			<!-- <div style="width: 80px; height: 25px; background-color: #4717F6; position: absolute; top: 64.5px; left: 920px; border-top: #ccc solid 2px; border-right: #ccc solid 2px;"></div> -->
+			<div class="fangge"><h3>Available Gates</h3></div>
+			
+			<div class="container33" style="float: left;">
 
-				<tr>
-					<td style="background-color: #0E0B16;"><img id="Img7" src="picture/PauliZ1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img8" src="picture/Identity0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-					<td style="background-color: #0E0B16;"><img id="Img9" src="picture/Identity1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></td>
-				</tr>
-			</table>
+				<div id="Box18" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img1" src="picture/control.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+				<div id="Box19" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img2" src="picture/Hadamard0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+				<div id="Box20" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img3" src="picture/Hadamard1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+				<div id="Box21" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img4" src="picture/PauliX0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+				<div id="Box22" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img5" src="picture/PauliX1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+				<div id="Box23" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img6" src="picture/PauliZ0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+				<div id="Box24" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img7" src="picture/PauliZ1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+				<div id="Box25" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img8" src="picture/Identity0.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
+				<div id="Box26" ondrop="Drop(event)" ondragover="AllowDrop(event)">
+					<img id="Img9" src="picture/Identity1.jpg" draggable="true" ondragstart="Drag(event)" style="width: 100px; height: 100px;"></div>
 
-			<div>
-				<span><button id="btn"  class="primary large" style="margin: 15px;">Measure</button></span>
-				<span><input type="reset" value="Clear" class="large" style="margin-left: 5px;"/></span>
+			</div>
+
+			<div style="position: absolute; top: 500px; left: 720px;">
+				<span><button id="btn"  class="primary large" style="margin-right: 20px; margin-top: 10px;">Measure</button></span>
+				<span><input id="clear" src="#" type="reset" value="Clear" class="large" style="margin-left: 20px; margin-top: 10px;"/></span>
 				<!-- <button onclick="ran()">aaa</button> -->
 	
 			</div>
